--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fancyapps/ui": "^6.0.24",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "nodemon": "^3.1.7",
@@ -18,7 +19,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-router-hash-link": "^2.4.3",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
